Add projeto e icon img

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--A tag 5 é para adaptar para o celular-->
     <title>DevLinks</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/assets/rock.JPEG" />
   </head>
   <body>
     <div id="container">
@@ -63,8 +64,14 @@
       </div>
 
       <footer>
-        Feito com ♥ pela
-        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+        Feito por Elton Júnior
+        <a
+          href="https://api.whatsapp.com/send?phone=5561998682435"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <ion-icon name="logo-whatsapp"></ion-icon
+        ></a>
       </footer>
     </div>
     <script
